# hasura-graphql-client

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
