[package]
name = "chatterverse_hasura_graphql_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0.185", features = ["derive"]}
serde_json = "1.0.105"
thiserror = "1.0.47"